# inf-rs

./: Cargo.toml  LICENSE  LICENSE-MIT  Readme.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs  types.rs
tests/: integration_tests.rs
tests/fixtures/: sampledisplay.inf
