[package]
name = "inf-rs"
version = "0.2.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "INF file parse library"
readme = "README.md"
repository = "https://github.com/krishnakumar4a4/inf-rs"

[dependencies]
encoding_rs = "0.8.35"
nom = "8.0.0"
log = "0.4.25"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.10.1"